chore: wrap category response with data
